# faultdetection-crm-offline

./: CMakeLists.txt  CMakeLists.txt~  README.md  crminrobotagent_optimised.cpp  crminrobotagent_optimised.h  extractpropfv.py  featurevectorsinrobotagent.cpp  featurevectorsinrobotagent.h  main.cpp  runcrm_script.py  runcrm_script_behavtransexpts.py
